Added custom font and nav buttons

--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
     </header>
     <div id="content">
         <img id="bubbleTea" src="./Bubble Tea Icon.png" alt="">
-
+        <h1>TASTEA</h1>
     </div>
 </body>
 </html>
