--- a/src/template.html
+++ b/src/template.html
@@ -14,8 +14,10 @@
         </nav>
     </header>
     <div id="content">
-        <img id="bubbleTea" src="./Bubble Tea Icon.png" alt="">
-        <h1>TASTEA</h1>
+        <div class="title">
+            <img id="bubbleTea" src="./Bubble Tea Icon.png" alt="">
+            <h1>TASTEA</h1>
+        </div>
     </div>
 </body>
 </html>
