Added slogan and made menu bar stick to top

--- a/src/template.html
+++ b/src/template.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <title>Tastea</title>
 </head>
 <body>
@@ -17,6 +20,12 @@
         <div class="title">
             <img id="bubbleTea" src="./Bubble Tea Icon.png" alt="">
             <h1>TASTEA</h1>
+        </div>
+        <div class="motto">
+            <img src="./brush stroke.webp" alt="" id="brushStroke">
+            <span>
+                Steep in the moment. Our artisanal teas transform ordinary breaks into extraordinary experiences, one perfectly brewed cup at a time.
+            </span>
         </div>
     </div>
 </body>
