Drafted menu page

--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,17 @@
         </nav>
     </header>
     <div id="content">
-
+        <div class="tea-menu">
+            <div id="xft-dabin">
+                <img src="xinfutang dabin.png" alt="Photo shared by Xing Fu Tang USA on Instagram.
+                Depicts a limited edition pinkish purple drink called the Night Bloom. Consists of
+                Butterfly pea limeade w/strawberry boba">
+                <div class="description">
+                    <h2>Night Bloom</h2>
+                    <p>Butterfly Pea Limeade w/Strawberry Boba</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
