--- a/src/template.html
+++ b/src/template.html
@@ -18,13 +18,40 @@
     </header>
     <div id="content">
         <div class="tea-menu">
-            <div id="xft-dabin">
+            <div class="tea-item" id="xft-dabin">
                 <img src="xinfutang dabin.png" alt="Photo shared by Xing Fu Tang USA on Instagram.
                 Depicts a limited edition pinkish purple drink called the Night Bloom. Consists of
                 Butterfly pea limeade w/strawberry boba">
                 <div class="description">
                     <h2>Night Bloom</h2>
                     <p>Butterfly Pea Limeade w/Strawberry Boba</p>
+                </div>
+            </div>
+            <div class="tea-item">
+                <img src="heytea oolong 3.3.png" alt="HEYTEA's Oolong 3.3
+                as shared on Instagram. Depicts a brown cup with white foam
+                on the rim and a green layers on the drink">
+                <div class="description">
+                    <h2>Oolong 3.3</h2>
+                    <p>Fresh milk with layered oolong</p>
+                </div>
+            </div>
+            <div class="tea-item">
+                <img src="grape iced tea.png" alt="Grape Iced Tea from Teazzi.
+                Depicts a drink with an orange and red gradient with whipped
+                cream on top">
+                <div class="description">
+                    <h2>Grape Iced Tea</h2>
+                    <p>Grape infused oolong tea topped with whipped cream</p>
+                </div>
+            </div>
+            <div class="tea-item">
+                <img src="SNOWY WHIPPED CREAM SERIES.png" alt="Grape Iced Tea from Teazzi.
+                Depicts a drink with an orange and red gradient with whipped
+                cream on top">
+                <div class="description">
+                    <h2>Grape Iced Tea</h2>
+                    <p>Grape infused oolong tea topped with whipped cream</p>
                 </div>
             </div>
         </div>
